[package]
name = "hex-coordinates"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Woollett-Light <jonathanwoollettlight@gmail.com>"]
description = "A library for handling hex coordinates."
license = "Apache-2.0"

repository = "https://github.com/JonathanWoollett-Light/hex-coordinates"
documentation = "https://docs.rs/hex-coordinates/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
